--- a/ck/xiaohu/pom.xml
+++ b/ck/xiaohu/pom.xml
@@ -93,7 +93,11 @@
             <artifactId>joda-time</artifactId>
             <version>2.9.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.3</version>
+        </dependency>
     </dependencies>
 
     <build>
