--- a/ck/xiaohu/pom.xml
+++ b/ck/xiaohu/pom.xml
@@ -98,6 +98,11 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
     <build>
